@startuml DB DIAGRAM

hide circle
skinparam linetype ortho

entity users {
  * id : UUID <<PK>>
  * email : TEXT <<not null>>
  * name : TEXT <<not null>>
  * password : TEXT <<not null>>
  * role : TEXT <<not null>>
}

entity municipalities {
  * id : INTEGER <<PK>> <<generated>>
  * name : TEXT <<unique>> <<not null>>
}

entity cabins {
  * id : INTEGER <<PK>> <<generated>>
  * name : TEXT <<not null>>
  * address : TEXT <<not null>>
  * price : INTEGER <<not null>> <<microcurrency>>
  * description : TEXT
  ---
  * municipality_id : INTEGER <<FK>> <<not null>>
  * owner_id : UUID <<FK>> <<not null>>
}

entity reviews {
  * id : INTEGER <<PK>> <<generated>>
  * content : TEXT
  * rating : SMALLINT
  ---
  * user_id : UUID <<FK>> not null
  * cabin_id : INTEGER <<FK>> not null
}

entity reservations {
  * id : INTEGER <<PK>> <<generated>>
  * start_date : DATE <<not null>>
  * end_date : DATE <<not null>>
  ---
  * user_id : UUID <<FK>> <<not null>>
  * cabin_id : INTEGER <<FK>> <<not null>>
}

entity cabin_images {
  * id : INTEGER <<PK>> <<generated>>
  * data : TEXT <<not null>> <<base64>>
  * is_default : BOOLEAN <<not null>>
  ---
  * cabin_id : INTEGER <<FK>> <<not null>>
}

entity keywords {
  * id : INTEGER <<PK>> <<generated>>
  * keyword : TEXT <<not null>>
}

cabins ||--o{ reservations
users ||--o{ reservations
cabin_images }o--|| cabins
reviews }o--|| cabins
reviews }o--|| users
municipalities ||--o{ cabins
keywords }o--o{ cabins

@enduml
